--- a/aki.css
+++ b/aki.css
@@ -69,7 +69,10 @@
   .ContactAKI ul{display: flex;justify-content: center; overflow: hidden;margin: 0;padding: 20px;}
   .ContactAKI li{list-style-type:none; margin: 0 5px -40px 5px;display: block;position: relative;transition: transform 0.3s ease; /* 添加過渡效果 */}
   .ContactAKI li:hover{transform: translateY(-20px); /* 向上移動 */}
-  .ContactAKI .WechatQR圖 {display: none;position: fixed;top: 33%;left: 33%;z-index: 9; width: 250px;height: 330px;}
+  .ContactAKI .WechatQR圖 {display: none;position: fixed;top: 33%;left: 33%;z-index: 9; width: 250px;height: 330px; background-image: url(https://raw.githubusercontent.com/64071181/mokJsapi/refs/heads/main/WechatQR.png);background-size: 100%;background-repeat: no-repeat;cursor: pointer;}
+  .WechatQR圖:hover{display: block}
+
+
 
   
   .廣告位 {transition: all 0.3s ease;background: rgb(63, 223, 255);background-size: auto;background-repeat: no-repeat;display: none;height: 0px;width: 0px;max-width: 300px;margin: auto;}
